# CppRustTemplate

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  preset-ninja-gcc.json  preset-vs2022-msvc.json  preset-xcode.json
.devcontainer/debian13/: Dockerfile  devcontainer.json
.github/workflows/: main.yml
cmake/: FindRust.cmake
cpp/demo/: CMakeLists.txt  main.cpp
rust/: CMakeLists.txt  Cargo.toml
rust/algorithms/: CMakeLists.txt
rust/dynhelpers/: CMakeLists.txt  Cargo.toml
rust/dynhelpers/src/: lib.rs
